created api of update & delete image of hotel & applied swagger docs in login & register api of education institute
