# app/Http/Controllers/Front/AuthController.php
@@ -29,14 +29,46 @@ use App\Model\Notification\Notifier;
 use App\Model\School\EducationInstitute as EduInstitute;
 
 class AuthController extends Controller{
-    
+/**
+    * @OA\Post(
+    * path="/login-user",
+    * operationId="Login",
+    * tags={"Login"},
+    * summary="User Login",
+    * description="Login User Here",
+    *     @OA\RequestBody(
+    *         @OA\JsonContent(),
+    *         @OA\MediaType(
+    *            mediaType="multipart/form-data",
+    *            @OA\Schema(
+    *               type="object",
+    *               required={"email", "password"},
+    *               @OA\Property(property="email", type="email"),
+    *               @OA\Property(property="password", type="password")
+    *            ),
+    *        ),
+    *    ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Login Successfully",
+    *          @OA\JsonContent()
+    *       ),
+    *      @OA\Response(
+    *          response=422,
+    *          description="Unprocessable Entity",
+    *          @OA\JsonContent()
+    *       ),
+    *      @OA\Response(response=400, description="Bad request"),
+    *      @OA\Response(response=404, description="Resource Not Found"),
+    * )
+    */
     public function login(Request $request){
         $validator = Validator::make($request->all(), [ 
             'email' => ['required','email',new EmailValidate],
             'password' => 'required',
         ]);
         if ($validator->fails()) { 
-            return response()->json(['error'=>$validator->errors()], 401);            
+            return response()->json(['error'=>$validator->errors()], 422);            
         }
         $credentials = [
             'email' => $request->email,
@@ -50,13 +82,57 @@ class AuthController extends Controller{
             return response()->json(['error' => 'UnAuthorised'], 401);
         }
     }
+
     /** 
      * Register api 
      * 
      * @return \Illuminate\Http\Response 
      */ 
+
+    /**
+    * @OA\Post(
+    * path="/register-user",
+    * operationId="Register",
+    * tags={"Register"},
+    * summary="User Register",
+    * description="User Register here",
+    *     @OA\RequestBody(
+    *         @OA\JsonContent(),
+    *         @OA\MediaType(
+    *            mediaType="multipart/form-data",
+    *            @OA\Schema(
+    *               type="object",
+    *               required={"name", "email", "password", "c_password"},
+    *               @OA\Property(property="name", type="text"),
+    *               @OA\Property(property="email", type="text"),
+    *               @OA\Property(property="password", type="password"),
+    *               @OA\Property(property="c_password", type="password")
+    *            ),
+    *        ),
+    *    ),
+    *      @OA\Response(
+    *          response=201,
+    *          description="Successfully Registered !!!",
+    *          @OA\JsonContent()
+    *       ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Successfully Registered !!!",
+    *          @OA\JsonContent()
+    *       ),
+    *      @OA\Response(
+    *          response=422,
+    *          description="Unprocessable Entity",
+    *          @OA\JsonContent()
+    *       ),
+    *      @OA\Response(response=400, description="Bad request"),
+    *      @OA\Response(response=404, description="Resource Not Found"),
+    * )
+    */
+
     public function register(Request $request) 
     { 
+        // exit;
         // if($request->email != 'csrikhi@gbinternational.in'){
             $validator = Validator::make($request->all(), [ 
                 'name' => 'required', 
@@ -72,7 +148,7 @@ class AuthController extends Controller{
             // ]);
         // }
         if ($validator->fails()) { 
-            return response()->json(['error'=>$validator->errors()], 401);            
+            return response()->json(['error'=>$validator->errors()], 422);            
         }
         $input = $request->all(); 
         // $input['password'] = bcrypt($input['password']??'');  
